--- a/my_to_do_app/templates/to_do/index.html
+++ b/my_to_do_app/templates/to_do/index.html
@@ -4,10 +4,10 @@
 <div class="row mt-4">
   <div class="col">
     <h2>Add Item</h2>
-    <form class="form-inline">
+    <form method = "POST" action = "/todo/add_todo/" name ="content" class="form-inline">{%csrf_token%}
         <div class="input-group">
             <input type="text" class="form-control mb-2 mr-small-2 rounded" placeholder="type here...">
-            <button type="button" class="btn btn-primary mb-2 ms-2 rounded">Submit</button>
+            <button type="submit" class="btn btn-primary mb-2 ms-2 rounded">Submit</button>
 
         </div>
     </form>
